Lesson 8: fix
