# backend_fefu_3_6/app/OpenApi/Schemas/FullInfoProductSchema.php
@@ -18,7 +18,7 @@ class FullInfoProductSchema extends SchemaFactory implements Reusable
      */
     public function build(): SchemaContract
     {
-        return Schema::object('Product')
+        return Schema::object('full_info')
             ->properties(
                 Schema::string('id')->default(null),
                 Schema::string('name')->default(null),
